Hibernate対応
